--- a/doony.css
+++ b/doony.css
@@ -877,3 +877,7 @@ a.yuimenulabel, a.yuimenuitemlabel,
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
+
+.section-header{
+	font-size:150%
+}
