Job-configuration: section parameter headings are blue

--- a/doony.css
+++ b/doony.css
@@ -877,7 +877,10 @@ a.yuimenulabel, a.yuimenuitemlabel,
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
-
+/*Job configuration*/
 .section-header{
 	font-size:150%
+}
+.dd-handle{
+	color:blue
 }
